--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_all"
-            android:icon="@drawable/ic_menu_camera"
+
             android:title="All exhibitions" />
         <item
             android:id="@+id/nav_most_popular"
-            android:icon="@drawable/ic_menu_gallery"
+
             android:title="Most popular exhibitions" />
         <item
             android:id="@+id/nav_map"
-            android:icon="@drawable/ic_menu_slideshow"
+
             android:title="Museum map" />
     </group>
 
@@ -22,26 +22,26 @@
         <menu>
             <item
                 android:id="@+id/nav_archeology"
-                android:icon="@drawable/ic_menu_share"
+                android:icon="@drawable/ic_arh"
                 android:title="Archeology" />
             <item
                 android:id="@+id/nav_history"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_history"
                 android:title="History" />
 
             <item
                 android:id="@+id/nav_nat_history"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_natural"
                 android:title="Natural history" />
 
             <item
                 android:id="@+id/nav_ethnology"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_etnology"
                 android:title="Ethnology" />
 
             <item
                 android:id="@+id/nav_art"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_art"
                 android:title="History art" />
 
 
