--- a/app/src/main/res/layout/fragment_all_exhibitions.xml
+++ b/app/src/main/res/layout/fragment_all_exhibitions.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AllExhibitions">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
         </LinearLayout>
-
+    </ScrollView>
 </FrameLayout>
