--- a/app/src/main/res/layout/fragment_code_scanner.xml
+++ b/app/src/main/res/layout/fragment_code_scanner.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".CodeScanner">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <SurfaceView
+        android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
