--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,12 +12,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp">
+
+    </View>
 
 
     <ImageView
+
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:src="@drawable/muzej"/>
+
+    <TextView
+        android:layout_marginTop="-40dp"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+
+        android:textSize="20dp"
+        android:text="MUSEUM OF REPUBLIC OF SRPSKA"/>
 
 
 
